--- a/CowinApp/templates/Alert.html
+++ b/CowinApp/templates/Alert.html
@@ -1,9 +1,3 @@
-<!-- <html>
-    <head>
-        <center><h1>Set Alert</h1></center>
-    </head>
-</html> -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -20,11 +14,8 @@
     #body {
   font-family: 'Nunito';
 background-color:white;
-/* background-image: linear-gradient(to bottom, rgba(110, 9, 241, 0.5), rgba(230, 236, 238, 0.5)); */
 height: 100px;
-/* background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTUJ0S_blQP9eOrIS8liW0v1f9-XXiQGmy8jw&usqp=CAU"); */
-/* background-image: "/Assets/Login.jpg"; */
-/* background-image: url("https://images.unsplash.com/photo-1579546929662-711aa81148cf?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80"); */
+
 }
 #login-card{
     width:350px;
@@ -77,7 +68,7 @@ height: 100px;
 <body id="body">
 <center><div id="alert">{{ alert }}</div></center>
 <form action="/" >
-<div  id = "back" style="position: absolute; top: 10px; right: 10px;"><button style="background-color: yellow; border-radius: 20px;"> Go back </button></div></a>
+<div  id = "back" style="position: absolute; top: 10px; right: 10px;"><button class="btn" style="background-color: yellow; border-radius: 20px;border-color: rgba(0, 0, 0, 0.753);border-width: 2px;"> Go back </button></div></a>
 </form>
 <div id="login-card" class="card">
 <div class="card-body">
@@ -145,3 +136,4 @@ function redirect(){
   window.location.href = "Alert.html";
 }
   </script>
+
