--- a/CowinApp/templates/index.html
+++ b/CowinApp/templates/index.html
@@ -6,7 +6,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
         <title>Home</title>
         <script src="Validate.js"></script>
-        <h1><center>Vaccine Availabilty</center></h1>
+        <h1><center>Vaccine Availability</center></h1>
         <br>
         <br>
     </head>
